welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: '(' expected but identifier found.
    if b<=20{}
       ^max1020:8: error: ')' expected but 'else' found.
      }else{
       ^